fixed alignment

--- a/tcb/assets/sass/custom.scss
+++ b/tcb/assets/sass/custom.scss
@@ -17,12 +17,12 @@ figure {
         background: url(/lib/img/lab.svg) center center no-repeat;
         border: 1px dashed #3DE9F2;
         border-radius: 100%;
-        background-size: 32px;
+        background-size: 35px;
         padding: 20px;
-        width: 32px;
-        height: 32px;
+        width: 35px;
+        height: 35px;
         content: "";
-        vertical-align: top;
+        vertical-align: middle;
         display: inline-block;
     }
 
